--- a/package.json
+++ b/package.json
@@ -4,5 +4,13 @@
   "main": "index.js",
   "repository": "https://github.com/hr-js/sam_api_server.git",
   "author": "t-kurihara",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "elasticsearch": "^14.0.0",
+    "fastify": "^0.35.3"
+  },
+  "devDependencies": {
+    "editorconfig": "^0.15.0",
+    "eslint": "^4.12.1"
+  }
 }
