Elasticsearchとの接続モジュール作成

--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "author": "t-kurihara",
   "license": "MIT",
   "dependencies": {
-    "elasticsearch": "^14.0.0",
-    "fastify": "^0.35.3"
+    "elasticsearch": "^14.1.0",
+    "fastify": "^0.35.7",
+    "moment": "^2.20.1"
   },
   "devDependencies": {
     "editorconfig": "^0.15.0",
