[change/add] chenge: start server sorce, add: test source.

--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "sam_api_server",
+  "name": "sam_api_app",
   "version": "1.0.0",
-  "main": "index.js",
-  "repository": "https://github.com/hr-js/sam_api_server.git",
+  "main": "app.js",
+  "repository": "https://github.com/hr-js/sam_api_app.git",
   "scripts": {
-    "http": "node server.js",
-    "http2": "NODE_HTTP=http2 node server.js",
-    "http-test": "NODE_ENV=test node server.js",
-    "http2-test": "NODE_HTTP=http2 NODE_ENV=test node server.js",
-    "test": "jest"
+    "prod:http":  "node app.js",
+    "prod:http2": "NODE_HTTP=http2 node app.js",
+    "dev:http":   "NODE_ENV=DEVELOP node app.js",
+    "dev:http2":  "NODE_HTTP=http2 NODE_ENV=DEVELOP node app.js",
+    "test:http":  "jest",
+    "test:http2": "NODE_HTTP=http2 jest"
   },
   "jest": {
     "verbose": true
