--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "prod:http2": "NODE_HTTP=http2 node app.js",
     "dev:http": "NODE_ENV=DEVELOP node app.js",
     "dev:http2": "NODE_HTTP=http2 NODE_ENV=DEVELOP node app.js",
-    "test:http": "jest",
-    "test:http2": "NODE_HTTP=http2 jest"
+    "test:http": "NODE_MODE=test jest",
+    "test:http2": "NODE_MODE=test NODE_HTTP=http2 jest"
   },
   "jest": {
-    "verbose": true
+    "verbose": false
   },
   "author": "t-kurihara",
   "license": "MIT",
@@ -23,10 +23,10 @@
   },
   "devDependencies": {
     "editorconfig": "^0.15.0",
-    "eslint": "^4.12.1",
+    "eslint": "^4.19.1",
+    "eslint-plugin-jest": "^21.15.0",
     "jest": "^22.2.2",
     "minimist": "^1.2.0",
-    "node-fetch": "^2.0.0",
-    "tap": "^11.1.3"
+    "node-fetch": "^2.0.0"
   }
 }
